# rge

./: Cargo.toml  LICENSE-MIT  README.md  RELEASE.md
.github/: pull_request_template.md
src/: analysis.rs  cli.rs  main.rs
src/analysis/: ndetect.rs  par.rs
