[package]
name = "rge"
description = "Reference genome explorer"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.11", features = ["derive", "cargo"] }
noodles = { version = "0.27.0", features = ["fasta", "core"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
